updated source code

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <div class="wrapper">
       <div class="container">
         <header>
-          <img src="" class="top-log" alt="grazeAgram logo" />
-          <img src="" class="avatar-top" alt="avatar" />
+          <img
+            src="/images/Graze_a_gram-removebg-preview.png"
+            class="top-logo"
+            alt="grazeAgram logo"
+          />
+          <img
+            src="/images/james-avatar.jpeg"
+            class="avatar-top"
+            alt="avatar"
+          />
         </header>
         <main>
           <div id="feedContainer">
