final JS updates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font Awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- style sheet -->
     <link rel="stylesheet" href="index.css" />
     <title>GrazeAGram</title>
   </head>
@@ -29,8 +38,15 @@
         </main>
         <footer>
           <small
-            >Built by James Alderman, 2023 | Powered by
-            <a href="">Scrimba</a></small
+            >Sheep Art by
+            <a href="http://countygalleries.co.uk/artists/david-alderman/"
+              >David Alderman</a
+            ></small
+          >
+          <br />
+          <small
+            >Built by James Alderman, 2023 | Powered & Inspired by
+            <a href="https://scrimba.com/">Scrimba</a></small
           >
         </footer>
       </div>
